samples/_failures_safe/1761792051_d91921_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31f703b2.c: In function ‘main’:
./samples/SAFE/__tmp_31f703b2.c:137:13: error: expected declaration or statement at end of input
  137 |             set_matrix_element(&a, i, j, val);
      |             ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_31f703b2.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_31f703b2.c:137:13: error: expected declaration or statement at end of input
